--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,11 @@
       <artifactId>selenium-java</artifactId>
       <version>4.14.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.9.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
