--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <version>4.14.1</version>
     </dependency>
     <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-remote-driver</artifactId>
+      <version>4.8.1</version>
+    </dependency>
+    <dependency>
       <groupId>io.appium</groupId>
       <artifactId>java-client</artifactId>
       <version>8.3.0</version>
